BFD-3398: Prototype of generation of DME EOB FHIR Resource Transformer for just 1 Element: identifier